# codemod-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.changeset/: pink-onions-yawn.md
.github/workflows/: codemod-agent.yml
crates/codemod-processor/: Cargo.toml
crates/codemod-processor/src/: lib.rs
crates/diff/: example.ts  index.d.ts  index.js
crates/diff/src/: lib.rs
native/: Cargo.toml  example.ts  index.d.ts
native/src/: lib.rs
src/: applyCodemod.ts  codemod-runner.ts  diff-parser.test.ts  diff-parser.ts  github.ts  index.ts  suggestion.ts  test-codemod.ts  types.ts  version.test.ts
src/handlers/: issue-comment.ts  pull-request.ts
src/services/: diff-parser.ts  github.ts  suggestion.ts
src/utils/: logger.ts  version.ts
test/: diff-parser.test.ts  issue-comment.test.ts
